AirquipUAT/force-app/main/default/objects/Vendor__c/fields/QuickBooks_Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Vendor_Id__c</fullName>
    <description>QuickBooks Online Vendor entity Id for this Account.</description>
    <externalId>true</externalId>
    <label>QuickBooks Vendor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>