AirquipUAT/force-app/main/default/objects/Vendor__c/fields/Require_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Require_PO_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require PO Number</label>
    <type>Checkbox</type>
</CustomField>