AirquipUAT/force-app/main/default/objects/Vendor__c/fields/Send_to_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Send_to_QuickBooks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to true (manual action), the Vendor trigger posts this Vendor to QuickBooks. Cleared to false after successful post. For batch SF→QB use Sync_to_QuickBooks__c instead.</description>
    <label>Send to QuickBooks</label>
    <type>Checkbox</type>
</CustomField>