AirquipUAT/force-app/main/default/objects/Vendor__c/fields/Sync_to_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_QuickBooks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this Vendor is synced from Salesforce to QuickBooks (trigger or batch). Cleared to false after successful sync. Prevents empty updates and duplicate upserts when SF and QB are already in sync.</description>
    <label>Sync to QuickBooks</label>
    <type>Checkbox</type>
</CustomField>