AirquipUAT/force-app/main/default/objects/Vendor__c/fields/Tax_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Group Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>faxa__Tax__c.faxa__Tax_Code_Id__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>faxa__Tax__c</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>