AirquipUAT/force-app/main/default/objects/Vendor__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1% 10 Net 30</fullName>
            </value>
            <value>
                <fullName>2% 10 Net 30</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>NET 10</fullName>
            </value>
            <value>
                <fullName>NET 15</fullName>
            </value>
            <value>
                <fullName>NET 25</fullName>
            </value>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 30 DAYS (Do Not Use)</fullName>
            </value>
            <value>
                <fullName>NET 40</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
            <value>
                <fullName>QTRLY INTEREST EXPENSE PMTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>