AirquipUAT/force-app/main/default/objects/Vendor__c/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <displayFormat>V-{00000}</displayFormat>
    <label>Vendor Number</label>
    <type>AutoNumber</type>
</CustomField>